# EdenFX

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  error.txt  project.tproj
src/: main.cpp
src/PandoraDebug/: console.cpp  console.hpp  consoleColor.cpp  consoleColor.hpp  dateTime.cpp  dateTime.hpp  log.cpp  log.hpp  utils.cpp  utils.hpp
src/PandoraEX/: asyncList.hpp  color.cpp  color.hpp  dateTime.hpp  event.hpp  exception.cpp  exception.hpp  list.hpp  method.hpp  object.cpp  object.hpp  property.hpp  size2.hpp  string.hpp  uniqueList.hpp  uniqueiList.hpp  utils.cpp  utils.hpp  valueWrapper.hpp  valueWrapper.hpp.removed
src/PandoraEX/dataTypes/: dataTypes2D.hpp
src/PandoraEX/dataTypes/base2D/: b_base2D.hpp.remove  base2D.cpp  base2D.hpp  math.cpp  math.cppp.remove  math.hpp  planeGeometryMath.hpp  transform.cpp  transform.hpp  typenames.hpp  utils.hpp  vectorGeometryMath.hpp
src/PandoraEX/dataTypes/base2D/primitives/: point2D.hpp  size2D.hpp  vector2D.hpp
src/PandoraEX/dataTypes/size2/: base_ops.cpp  op+.cpp  op-.cpp  op_div.cpp  op_mult.cpp
src/PandoraEX/macros/: whatOS.hpp
src/PandoraEX/string/: constructors.cpp  operators.cpp  utils.cpp
src/PandoraUI/: init.cpp  init.hpp  window.hpp  windowManager.cpp  windowManager.hpp  windowOpts.hpp
src/PandoraUI/UIElements/: UIElement.hpp
src/PandoraUI/window/: constructors.cpp  enums.hpp  gui.cpp  initialize.cpp  window.cpp
tests/: catch_amalgamated.hpp  test.cpp
